--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "draftjs-to-html": "^0.9.1",
     "firebase": "^7.7.0",
+    "html-to-draftjs": "^1.5.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-datetime": "^2.16.3",
-    "react-datetime-bootstrap": "^1.4.7",
     "react-dom": "^16.12.0",
+    "react-draft-wysiwyg": "^1.14.4",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.7",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-auth-wrapper": "^3.0.0",
     "redux-thunk": "^2.3.0",
+    "sanitize-html": "^1.21.1",
     "uuid": "^3.4.0"
   },
   "scripts": {
