--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.4",
     "draftjs-to-html": "^0.9.1",
     "firebase": "^7.7.0",
     "html-to-draftjs": "^1.5.0",
